update approval key
